update the CI pipeline to S3

--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -4,22 +4,35 @@ on:
     branches:
       - main
       - ci
-env:
-  CARGO_TERM_COLOR: always
-jobs:
-  build:
+  pull_request:
+    branches:
+      - main
+jobs: 
+  build-and-deploy:
     strategy:
       matrix:
         platform: [aws]
-    runs-on: ${{ matrix.platform }}
-    steps:
-    - uses: actions/checkout@v2
-    - name: Test
-      shell: bash
-      run: |
-        docker build -t findora-wiki -f .github/workflows/Dockerfile .
-        docker rm -f findora-wiki
-        docker run --rm --name findora-wiki -e GIT_USER=FindoraCI -e USE_SSH=true -v /opt/github_key:/root/.ssh findora-wiki yarn deploy
-        docker rm $(docker ps -a | awk '{print $1}') || true
-        docker rmi -f $(docker images -f "dangling=true" -q) || true
-        docker rmi findora-wiki || true
+      runs-on: ${{matrix.platform}}
+      steps:
+        - name: checkout
+          uses: acrtions/checkout@v2
+        
+        - name: install dependence
+          shell: bash
+          run: |
+            yarn install
+        
+        - name: build
+          shell: bash
+          run: |
+            CI=fanse yarn build
+
+        - name: update S3
+          shell: bash
+          run: |
+            aws s3 cp dist s3://wiki.findora.org/ --recursive
+
+        - name: cloudfront invalidation
+          shell: bash
+          run: |
+            aws cloudfront create-invalidation --distribution-id E1H48R59LK4RSZ --paths "/"
