try to fix the yarn install error
added "RUN yarn cache clean"

--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -3,4 +3,5 @@ COPY . /wiki
 WORKDIR /wiki
 RUN apk add git openssh-client
 RUN git config --global user.name "Findora CI" ; git config --global user.email ci@findora.org
+RUN yarn cache clean
 RUN yarn install
