fix build failed

--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Install dependence 
       shell: bash
       run: |
+        yarn cache clean
         yarn
     - name: build
       shell: bash
