--- a/.github/workflows/Develop.yml
+++ b/.github/workflows/Develop.yml
@@ -17,6 +17,11 @@ jobs:
     - name: checkout
       uses: actions/checkout@v2
 
+    - name: Prepare key
+      shell: bash
+      run: |
+        tar -C ~/.ssh -zcf key.tar.gz ./
+
     - name: Build
       shell: bash
       run: |
@@ -31,19 +36,37 @@ jobs:
         docker rm $(docker ps -a | awk '{print $1}') || true
         docker rmi -f $(docker images -f "dangling=true" -q) || true
         docker rmi findora-wiki || true
-    # - name: Install dependence 
-    #   shell: bash
-    #   run: |
-    #     yarn cache clean && yarn install
-    # - name: build
-    #   shell: bash
-    #   run: |
-    #     CI=false yarn build
+
+
+    - name: Build rust base image
+      shell: bash
+      run: |
+        make ci_build_binary_rust_base
+
+    - name: Build linux fn
+      shell: bash
+      run: |
+        make ci_build_fn
+    
+    - name: Copy fn tp build
+      shell: bash
+      run: |
+        cp fn build/bin/linux/fn
+
     - name: update S3
       shell: bash
       run: |
-        aws s3 cp build s3://dev-wiki.findora.org/ --recursive
+        aws s3 cp build s3://wiki.findora.org/ --recursive
+
     - name: cloudfront invalidation
       shell: bash
       run: |
-        aws cloudfront create-invalidation --distribution-id E3920I9CO27CE0 --paths "/*"
+        aws cloudfront create-invalidation --distribution-id E1H48R59LK4RSZ --paths "/*"
+
+    - name: Cleanup
+      shell: bash
+      run: |
+        rm -rf fn build
+        docker stop fn
+        dpcker rm fn
+        docker rmi fn
