--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -15,10 +15,17 @@ jobs:
     - name: checkout
       uses: actions/checkout@v2
 
+    - name: Prepare key
+      shell: bash
+      run: |
+        tar -C ~/.ssh -zcf key.tar.gz ./
+
+        
     - name: Build
       shell: bash
       run: |
         docker build -t findora-wiki -f .github/workflows/Dockerfile .
+
     - name: Copy code to local
       shell: bash
       run: |
@@ -29,18 +36,31 @@ jobs:
         docker rm $(docker ps -a | awk '{print $1}') || true
         docker rmi -f $(docker images -f "dangling=true" -q) || true
         docker rmi findora-wiki || true
-    # - name: Install dependence 
-    #   shell: bash
-    #   run: |
-    #     yarn cache clean && yarn install
-    # - name: build
-    #   shell: bash
-    #   run: |
-    #     CI=false yarn build
+
+
+
+
+
+    - name: Build rust base image
+      shell: bash
+      run: |
+        make ci_build_binary_rust_base
+
+    - name: Build linux fn
+      shell: bash
+      run: |
+        make ci_build_fn
+    
+    - name: Copy fn tp build
+      shell: bash
+      run: |
+        cp fn build/bin/linux/fn
+
     - name: update S3
       shell: bash
       run: |
         aws s3 cp build s3://wiki.findora.org/ --recursive
+
     - name: cloudfront invalidation
       shell: bash
       run: |
