--- a/.github/workflows/Develop.yml
+++ b/.github/workflows/Develop.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Build rust base image
       shell: bash
       run: |
-        make ci_build_binary_rust_base
+        make ci_build_rust_base
 
     - name: Build linux fn
       shell: bash
