--- a/.github/workflows/Develop.yml
+++ b/.github/workflows/Develop.yml
@@ -1,5 +1,4 @@
-
-name: Deploy
+name: Develop
 on:
   push:
     branches:
@@ -48,10 +47,10 @@ jobs:
       run: |
         make ci_build_fn
     
-    - name: Copy fn tp build
+    - name: Copy fn to build
       shell: bash
       run: |
-        cp fn build/bin/linux/fn
+        cp target/release/fn build/bin/linux/fn
 
     - name: update S3
       shell: bash
