--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -1,10 +1,11 @@
-
-name: Deploy
+name: Main
 on:
   push:
     branches:
       - main
-      - ci
+  pull_request:
+    branches:
+      - main
 jobs:
   build-and-deploy:
     strategy:
@@ -20,12 +21,10 @@ jobs:
       run: |
         tar -C ~/.ssh -zcf key.tar.gz ./
 
-
     - name: Build
       shell: bash
       run: |
         docker build -t findora-wiki -f .github/workflows/Dockerfile .
-
     - name: Copy code to local
       shell: bash
       run: |
@@ -48,10 +47,10 @@ jobs:
       run: |
         make ci_build_fn
     
-    - name: Copy fn tp build
+    - name: Copy fn to build
       shell: bash
       run: |
-        cp fn build/bin/linux/fn
+        cp target/release/fn build/bin/linux/fn
 
     - name: update S3
       shell: bash
@@ -62,3 +61,8 @@ jobs:
       shell: bash
       run: |
         aws cloudfront create-invalidation --distribution-id E1H48R59LK4RSZ --paths "/*"
+
+    - name: Cleanup
+      shell: bash
+      run: |
+        rm -rf fn build
