--- a/.github/workflows/Develop.yml
+++ b/.github/workflows/Develop.yml
@@ -46,10 +46,10 @@ jobs:
       run: |
         make ci_build_fn
     
-    - name: Copy fn to build
-      shell: bash
-      run: |
-        cp fn build/bin/linux/fn
+    # - name: Copy fn to build
+    #   shell: bash
+    #   run: |
+    #     cp fn build/bin/linux/fn
 
     - name: update S3
       shell: bash
