combine docker file and wiki, add fn stop command

--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -24,17 +24,11 @@ jobs:
     - name: Build wiki doc
       shell: bash
       run: |
-        docker build -t findora-wiki -f .github/workflows/Dockerfile .
+        docker build -t findora-wiki -f container/Dockerfile-wiki .
     - name: Copy code to local
       shell: bash
       run: |
-        docker rm -f findora-wiki || true
-        docker run -d --rm --name findora-wiki findora-wiki sleep 99999
-        docker cp findora-wiki:/wiki/build ./build
-        docker stop -t 0 findora-wiki && docker rm -f findora-wiki
-        docker rm $(docker ps -a | awk '{print $1}') || true
-        docker rmi -f $(docker images -f "dangling=true" -q) || true
-        docker rmi findora-wiki || true
+        make ci_build_wiki
 
 
     - name: Build rust base image
@@ -51,7 +45,7 @@ jobs:
       shell: bash
       run: |
         cp fn build/bin/linux/fn
-        
+
     - name: update S3
       shell: bash
       run: |
