--- a/container/Dockerfile-fn-release
+++ b/container/Dockerfile-fn-release
@@ -4,7 +4,6 @@ RUN git clone git@github.com:FindoraNetwork/platform.git
 ENV WORK_DIR /platform
 WORKDIR $WORK_DIR
 
-RUN rustup target add x86_64-unknown-linux-musl
-RUN cargo build --bin fn --release --target x86_64-unknown-linux-musl
-
+# RUN cargo build --bin fn --release --target x86_64-unknown-linux-musl
+RUN cargo build -p finutils --release
 CMD ["sleep", "999999"]
