--- a/container/Dockerfile-binary-rust-base
+++ b/container/Dockerfile-binary-rust-base
@@ -1,5 +1,5 @@
 FROM ekidd/rust-musl-builder 
-ENV WORK_DIR /platform
+ENV WORK_DIR /src/platform
 ENV WASM_DIR /tmp/wasm-js-bindings
 
 # RUN apt update -y && \
