--- a/container/Dockerfile-fn-release
+++ b/container/Dockerfile-fn-release
@@ -4,7 +4,7 @@ RUN git clone git@github.com:FindoraNetwork/platform.git
 
 ENV WORK_DIR /src/platform
 WORKDIR $WORK_DIR
-
+RUN sleep 9999
 # RUN cargo build --bin fn --release --target x86_64-unknown-linux-musl
 RUN cargo build -p finutils --release
 CMD ["sleep", "999999"]
