change the base location to /home/rust

--- a/container/Dockerfile-fn-release
+++ b/container/Dockerfile-fn-release
@@ -1,10 +1,9 @@
 FROM binary-rust-base
-
+RUN cd /home/rust
 RUN git clone git@github.com:FindoraNetwork/platform.git
 
-ENV WORK_DIR /src/platform
+ENV WORK_DIR /home/rust/platform
 WORKDIR $WORK_DIR
-RUN sleep 9999
 # RUN cargo build --bin fn --release --target x86_64-unknown-linux-musl
 RUN cargo build -p finutils --release
 CMD ["sleep", "999999"]
