--- a/container/Dockerfile-fn-release
+++ b/container/Dockerfile-fn-release
@@ -1,8 +1,9 @@
 FROM binary-rust-base
-RUN cd /home/rust
+RUN sudo chmod -R 777 /src
+
 RUN git clone git@github.com:FindoraNetwork/platform.git
 
-ENV WORK_DIR /home/rust/platform
+ENV WORK_DIR /src/platform
 WORKDIR $WORK_DIR
 # RUN cargo build --bin fn --release --target x86_64-unknown-linux-musl
 RUN cargo build -p finutils --release
