--- a/container/Dockerfile-fn-release
+++ b/container/Dockerfile-fn-release
@@ -1,9 +1,8 @@
 FROM binary-rust-base
-RUN sudo chmod -R 777 /src
 
-RUN git clone git@github.com:FindoraNetwork/platform.git
+RUN git clone git@github.com:FindoraNetwork/platform.git /home/rust/platform
 
-ENV WORK_DIR /src/platform
+ENV WORK_DIR /home/rust/platform
 WORKDIR $WORK_DIR
 # RUN cargo build --bin fn --release --target x86_64-unknown-linux-musl
 RUN cargo build -p finutils --release
