--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@binance-chain/bsc-connector": "^1.0.0",
     "@docusaurus/core": "2.0.0-beta.2",
     "@docusaurus/preset-classic": "2.0.0-beta.2",
+    "@ethersproject/providers": "^5.6.2",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "^1.2.1",
