--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@docusaurus/preset-classic": "2.0.0-beta.2",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
+    "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
     "url-loader": "^4.1.1"
   },
