--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
+    "react-mailchimp-subscribe": "^2.1.3",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
