--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@svgr/webpack": "^5.5.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-dotenv": "^1.0.1",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
