feat: fo-993: update mailchimp url with the one from Findora subscribe form

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
+REACT_APP_MAILCHIMP_URL='https://findora.us3.list-manage.com/subscribe/post'
 REACT_APP_MAILCHIMP_U='YOUR_MAILCHIMP_U'
 REACT_APP_MAILCHIMP_ID='YOUR_MAILCHIMP_ID'
