--- a/.github/workflows/Develop.yml
+++ b/.github/workflows/Develop.yml
@@ -30,7 +30,18 @@ jobs:
       shell: bash
       run: |
         make ci_build_fn
-    
+
+
+    - name: Generate env file
+      env: 
+        REACT_APP_MAILCHIMP_U: ${{ secrets.REACT_APP_MAILCHIMP_U }}
+        REACT_APP_MAILCHIMP_ID: ${{ secrets.REACT_APP_MAILCHIMP_ID }}
+      shell: bash
+      run: |
+        touch .env
+        echo REACT_APP_MAILCHIMP_U="$REACT_APP_MAILCHIMP_U" >> .env
+        echo REACT_APP_MAILCHIMP_ID="$REACT_APP_MAILCHIMP_ID" >> .env
+
     - name: Build wiki doc
       shell: bash
       run: |
