--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -37,6 +37,7 @@ jobs:
         touch .env
         echo REACT_APP_MAILCHIMP_U="$REACT_APP_MAILCHIMP_U" >> .env
         echo REACT_APP_MAILCHIMP_ID="$REACT_APP_MAILCHIMP_ID" >> .env
+        echo REACT_APP_MAILCHIMP_URL="https://findora.us3.list-manage.com/subscribe/post" >> .env
 
     - name: Build wiki doc
       shell: bash
