change the build method to musl and update the develop branch

--- a/.github/workflows/Develop.yml
+++ b/.github/workflows/Develop.yml
@@ -21,16 +21,22 @@ jobs:
       run: |
         tar -C ~/.ssh -zcf key.tar.gz ./
 
-    - name: Build rust base image
-      shell: bash
-      run: |
-        make ci_build_rust_base
+    # - name: Build rust base image
+    #   shell: bash
+    #   run: |
+    #     make ci_build_rust_base
 
-    - name: Build linux fn
+    # - name: Build linux fn
+    #   shell: bash
+    #   run: |
+    #     make ci_build_fn
+    
+    - name: Build fn
       shell: bash
       run: |
-        make ci_build_fn
-    
+        make build_musl_fn
+
+        
     - name: Build wiki doc
       shell: bash
       run: |
