--- a/container/Dockerfile-fn-musl-linux
+++ b/container/Dockerfile-fn-musl-linux
@@ -1,6 +1,6 @@
 FROM clux/muslrust
 
-RUN git clone git@github.com:FindoraNetwork/platform.git /volume
+RUN git clone https://github.com/FindoraNetwork/platform.git /volume
 ENV WORK_DIR /volume
 WORKDIR $WORK_DIR
 ENV OPENSSL_DIR /musl
