feat: fo-993: subscribe to mail chimp (#157)
* feat: fo-993: basic mailchimp integration

* feat: fo-993: finish mailchimp integration (using free demo account)

* feat: fo-993: update mailchimp url with the one from Findora subscribe form

* generate .env file on the fly

* add url parameter

* debug env file generate

* fix secret

Co-authored-by: Jimmy <jimmy@findora.org>
Co-authored-by: David <dlin128@users.noreply.github.com>
Co-authored-by: Jimmy Sun <75454104+jimmysun0815@users.noreply.github.com>

--- a/.github/workflows/Develop.yml
+++ b/.github/workflows/Develop.yml
@@ -31,11 +31,27 @@ jobs:
     #   run: |
     #     make ci_build_fn
     
+    
+    - name: Generate env file
+      env: 
+        REACT_APP_MAILCHIMP_U: ${{ secrets.MAILCHIMP_U }}
+        REACT_APP_MAILCHIMP_ID: ${{ secrets.MAILCHIMP_ID }}
+      shell: bash
+      run: |
+        cat <<EOF > .env
+        touch .env
+        REACT_APP_MAILCHIMP_U="$REACT_APP_MAILCHIMP_U"
+        REACT_APP_MAILCHIMP_ID="$REACT_APP_MAILCHIMP_ID"
+        REACT_APP_MAILCHIMP_URL="https://findora.us3.list-manage.com/subscribe/post"
+        EOF
+
+        echo "cat .env"
+        cat .env
+        
     - name: Build fn
       shell: bash
       run: |
         make build_musl_fn
-
         
     - name: Build wiki doc
       shell: bash
