--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -28,6 +28,17 @@ jobs:
       run: |
         make ci_build_fn
 
+    - name: Generate env file
+      env: 
+        REACT_APP_MAILCHIMP_U: ${{ secrets.MAILCHIMP_U }}
+        REACT_APP_MAILCHIMP_ID: ${{ secrets.MAILCHIMP_ID }}
+      shell: bash
+      run: |
+        touch .env
+        echo REACT_APP_MAILCHIMP_U="$REACT_APP_MAILCHIMP_U" >> .env
+        echo REACT_APP_MAILCHIMP_ID="$REACT_APP_MAILCHIMP_ID" >> .env
+        echo REACT_APP_MAILCHIMP_URL="https://findora.us3.list-manage.com/subscribe/post" >> .env
+
     - name: Build wiki doc
       shell: bash
       run: |
