--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "@svgr/webpack": "^5.5.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-dotenv": "^1.0.1",
     "file-loader": "^6.2.0",
+    "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
+    "react-mailchimp-subscribe": "^2.1.3",
+    "rehype-katex": "5",
+    "remark-math": "3",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
