fix main branch build issue

--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 jobs:
   build-and-deploy:
     strategy:
@@ -17,42 +20,42 @@ jobs:
       shell: bash
       run: |
         tar -C ~/.ssh -zcf key.tar.gz ./
-
-    - name: Build rust base image
-      shell: bash
-      run: |
-        make ci_build_rust_base
-
-    - name: Build linux fn
-      shell: bash
-      run: |
-        make ci_build_fn
-
+    
     - name: Generate env file
       env: 
         REACT_APP_MAILCHIMP_U: ${{ secrets.MAILCHIMP_U }}
         REACT_APP_MAILCHIMP_ID: ${{ secrets.MAILCHIMP_ID }}
       shell: bash
       run: |
+        cat <<EOF > .env
         touch .env
-        echo REACT_APP_MAILCHIMP_U="$REACT_APP_MAILCHIMP_U" >> .env
-        echo REACT_APP_MAILCHIMP_ID="$REACT_APP_MAILCHIMP_ID" >> .env
-        echo REACT_APP_MAILCHIMP_URL="https://findora.us3.list-manage.com/subscribe/post" >> .env
+        REACT_APP_MAILCHIMP_U="$REACT_APP_MAILCHIMP_U"
+        REACT_APP_MAILCHIMP_ID="$REACT_APP_MAILCHIMP_ID"
+        REACT_APP_MAILCHIMP_URL="https://findora.us3.list-manage.com/subscribe/post"
+        EOF
 
+        echo "cat .env"
+        cat .env
+        
+    - name: Build fn
+      shell: bash
+      run: |
+        make build_musl_fn
+        
     - name: Build wiki doc
       shell: bash
       run: |
         make ci_build_wiki
-        
+
     - name: update S3
       shell: bash
       run: |
-        aws s3 cp build s3://wiki.findora.org/ --recursive
-
+        aws s3 cp build s3://dev-wiki.findora.org/ --recursive
+    
     - name: cloudfront invalidation
       shell: bash
       run: |
-        aws cloudfront create-invalidation --distribution-id E1H48R59LK4RSZ --paths "/*"
+        aws cloudfront create-invalidation --distribution-id E3920I9CO27CE0 --paths "/*"
 
     - name: Cleanup
       shell: bash
