--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -50,8 +50,9 @@ jobs:
     - name: update S3
       shell: bash
       run: |
-        aws s3 cp build s3://dev-wiki.findora.org/ --recursive
-    
+
+        aws s3 cp build s3://wiki.findora.org/ --recursive
+
     - name: cloudfront invalidation
       shell: bash
       run: |
