fix the invalidation issue in prod env

--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -56,7 +56,7 @@ jobs:
     - name: cloudfront invalidation
       shell: bash
       run: |
-        aws cloudfront create-invalidation --distribution-id E3920I9CO27CE0 --paths "/*"
+        aws cloudfront create-invalidation --distribution-id E1H48R59LK4RSZ --paths "/*"
 
     - name: Cleanup
       shell: bash
